<resources>
    <string name="app_name">SH2016</string>
    <string name="title_activity_tabbed">Tabbed</string>
    <string name="action_settings">Credits</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_settings_logout">Log-out</string>
    <string name="find">Find yourself</string>
    <string name="cancelar">Cancel</string>
    <string name="confirmar">Confirm</string>
    <string name="tem_a_certeza_que_deseja_comprar_esta_senha">Are you sure you want to buy this ticket?</string>
    <string name="por_mapas">By maps:</string>
    <string name="por_imagens">By pictures:</string>
    <string name="deseja_alterar_o_seu_hor_rio_curso">Do you want to change your schedule/course?</string>
    <string name="seleccione_o_seu_curso">Select your course:</string>
    <string name="seguinte">Next</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="entrar">Enter</string>
    <string name="programadores">The developpers.</string>
    <string name="saldo_dispon_vel">Balance Available.:</string>
    <string name="quanto_deseja_carregar">How much money you want to deposit?</string>
    <string name="segunda">Monday</string>
    <string name="ter_a">Tuesday</string>
    <string name="quarta">Wednes.</string>
    <string name="quinta">Thursday</string>
    <string name="sexta">Friday</string>
    <string name="o_teu_hor_rio">Your Schedule</string>
    <string name="almo_o">Lunch</string>
    <string name="jantar">Dinner</string>
    <string name="saldo">Balance:</string>

    <string name="seleccione_as_suas_disciplinas">Select your subjects:</string>
    <string name="_1_ano">1º year</string>
    <string name="_1_semestre">1º semester</string>
    <string name="an_lise_matem_tica">Math analysis</string>
    <string name="lgebra_linear_e_geometria_anal_tica">Linear algebra and analytic geometry</string>
    <string name="arquitetura_e_sistemas_de_computadores">Architecture and Computer Systems</string>
    <string name="algoritmos_e_estruturas_de_dados">Algorithms and data structures</string>
    <string name="matem_tica_discreta_i">Discrete mathematics I</string>
    <string name="_2_semestre">2º semester</string>
    <string name="matem_tica_discreta_ii">Discrete mathematics II</string>
    <string name="programa_o_i">Programming I</string>
    <string name="sistemas_operativos">Operating systems</string>
    <string name="estat_stica">Statistic</string>
    <string name="comportamento_sociedade_e_cidadania_i">Behavior, Society and Citizenship I</string>
    <string name="_2_ano">2º year</string>
    <string name="investiga_o_operacional">Operational investigation</string>
    <string name="engenharia_de_software_i">Software Engineering I</string>
    <string name="programa_o_ii">Programming II</string>
    <string name="base_de_dados">Data base</string>
    <string name="redes_computadores">Networking Computers</string>
    <string name="projeto_i">Project I</string>
    <string name="administra_o_base_de_dados">Administration Database</string>
    <string name="tecnologias_multim_dia">Multimedia Technologies</string>
    <string name="intera_o_homem_m_quina">Human-Machine Interaction</string>
    <string name="intelig_ncia_artificial">Artificial intelligence</string>
    <string name="engenharia_de_software_ii">Software Engineering II</string>
    <string name="projeto_ii">Project II</string>
    <string name="_3_ano">3º year</string>
    <string name="comportamento_sociedade_e_cidadania_ii">Behavior, Society and Citizenship II</string>
    <string name="sistemas_de_informa_o_em_rede">Information Systems Network</string>
    <string name="integra_o_de_sistemas">Systems integration</string>
    <string name="op_o_i">Option I</string>
    <string name="projecto_iii">Project III</string>
    <string name="comportamento_sociedade_e_cidadania_iii">Behavior, Society and Citizenship III</string>
    <string name="computa_o_m_vel">Mobile computing</string>
    <string name="seguran_a_de_redes_e_sistemas">Networks and Systems Security</string>
    <string name="op_o_ii">Option II</string>
    <string name="projecto_iv">Project IV</string>
    <string name="guardar">Save</string>


    <string name="tem_a_certeza_que_deseja_vender_esta_senha">Are you sure you want to sell this ticket?</string>
</resources>